<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context="com.zybooks.pizzaparty.MainActivity">

    <TextView
        android:layout_width="354dp"
        android:layout_height="64dp"
        android:labelFor="@id/num_attend_edit_text"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/primary_color"
        android:textSize="24sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/num_attend_edit_text"
        android:text="@string/num_people"
        android:textColor="@color/purple_500"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/num_attend_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:labelFor="@id/hungry_radio_group"
        android:text="@string/how_hungry"
        android:textColor="@color/purple_500"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/hungry_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/light_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_light"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/medium_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/type_medium"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/ravenous_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_raz"
            android:textColor="@color/black" />
    </RadioGroup>

    <TextView
        android:id="@+id/num_pizzas_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/total_pizzas"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <Button
        android:id="@+id/calc_button"
        style="@style/CalcButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="calculateClick"
        android:text="Calculate" />
</LinearLayout>